tests/invalid/Negation_Invalid_1.whiley
public export method test():
    assume -[-1][0] == 1